<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.gov.ida.stub-idp</groupId>
    <artifactId>parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <!-- language version -->
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- runtime dependencies -->
        <opensaml.version>3.4.2</opensaml.version>
        <dropwizard.version>1.3.8</dropwizard.version>
        <dropwizard_guicier.version>1.0.0.6</dropwizard_guicier.version>
        <guice.version>4.2.2</guice.version>
        <guava.version>24.1.1-jre</guava.version>
        <joda_time.version>2.10.1</joda_time.version>
        <shibboleth_utils.version>7.4.2</shibboleth_utils.version>
        <javax_validation.version>1.1.0.Final</javax_validation.version>
        <jackson.version>2.9.8</jackson.version>
        <nimbus_jwt.version>5.4</nimbus_jwt.version>
        <slf4j.version>1.7.25</slf4j.version>
        <jaxb.version>2.2.3</jaxb.version>
        <commons_codec.version>1.10</commons_codec.version>
        <commons_io.version>2.5</commons_io.version>
        <commons_lang.version>2.6</commons_lang.version>
        <commons_lang3.version>3.7</commons_lang3.version>
        <commons_validator.version>1.6</commons_validator.version>
        <aws_java_sdk.version>1.11.277</aws_java_sdk.version>
        <logstash_logback_encoder.version>4.11</logstash_logback_encoder.version>
        <logback.version>1.2.3</logback.version>
        <javax_activation.version>1.2.0</javax_activation.version>

        <!-- test dependencies -->
        <assertj.version>3.9.1</assertj.version>
        <assertj_jodatime.version>1.1.0</assertj_jodatime.version>
        <junit.version>5.4.0</junit.version>
        <mockito.version>2.23.0</mockito.version>
        <hamcrest.version>1.3</hamcrest.version><!-- only in dropwizard-logstash -->
    </properties>

    <modules>
        <module>stub-idp</module>
        <module>hub-saml</module>
        <module>saml-extensions</module>
        <module>saml-metadata-bindings</module>
        <module>saml-security</module>
        <module>saml-serializers</module>
        <module>saml-utils</module>
        <module>trust-anchor</module>
        <module>stub-idp-saml</module>
        <module>stub-idp-saml-test</module>
        <module>integration-tests</module>
        <module>test-utils</module>
        <module>common-utils</module>
        <module>rest-utils</module>
        <module>security-utils</module>
        <module>event-emitter</module>
        <module>dropwizard-logstash</module>
        <module>dev-pki</module>
    </modules>

    <repositories>
        <repository>
            <id>jcenter</id>
            <url>https://jcenter.bintray.com</url>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
        <repository>
            <id>shibboleth opensaml</id>
            <url>https://build.shibboleth.net/nexus/content/repositories/releases</url>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
    </repositories>

</project>
